--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 
-streamlit==1.31.0
+streamlit==1.32.0
 matplotlib==3.8.4
 tensorflow==2.16.1
 h5py==3.11.0
@@ -7,5 +7,5 @@ pandas_datareader==0.10.0
 streamlit==1.32.0
 yfinance==0.2.37
 keras==3.1.1
-Joblib version==1.4.2
-Pickle version==4.0 
+Joblib==1.4.2
+Pickle==4.0 
